src/main/java/ru/kuryakin/lab2_4/task1/Task1.g4
grammar Task1;

start       :   list '\n';

list        :   exp                     #L
            |   list ',' exp            #leftL;


exp          :   Hex                    #hex
            |   Hex '(' list  ')'       #reiteration;

Hex         :   [0-9a-fA-F]+;
WS          :   [ \t\r]+ -> skip;
